# server/database/models/userModel.js
@@ -1,25 +1,27 @@
-const mongoose = require('mongoose')
+const mongoose = require('mongoose');
 
 const userSchema = new mongoose.Schema(
   {
-    email: String,
-    password: String,
-    firstName: String,
-    lastName: String,
-    userName: String
+    
+    email: { type: String, required: true, unique: true },
+    password: { type: String, required: true },
+    firstName: { type: String, required: true },
+    lastName: { type: String, required: true },
+    userName: { type: String, required: true }
   },
   {
     timestamps: true,
     toObject: {
       transform: (doc, ret, options) => {
-        ret.id = ret._id
-        delete ret._id
-        delete ret.password
-        delete ret.__v
-        return ret
+        ret.id = ret._id;
+        delete ret._id;
+        delete ret.password;
+        delete ret.__v;
+        return ret;
       }
     }
   }
-)
+);
 
-module.exports = mongoose.model('User', userSchema)
+module.exports = mongoose.model('User', userSchema);
+
